侧边栏点击闪开收缩，并且注入material图标

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,15 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
 <md-sidenav-container>
-  <md-sidenav #sidenav>
+  <md-sidenav #sidenav mode="side">
     <app-sidebar></app-sidebar>
   </md-sidenav>
  <div class="site">
   <header>
-    <app-header></app-header>
+    <app-header (toggle)="sidenav.toggle()"></app-header>
   </header>
   <main>
-    <button (click)="sidenav.open()">打开侧边栏</button>
+    <button (click)="sidenav.toggle()">打开侧边栏</button>
   </main>
   <footer>
     <app-footer></app-footer>
