--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,3 +1,5 @@
-<p>
-  footer works!
-</p>
+<md-toolbar color="primary">
+  <span class="fill-remaining-space"></span>
+  <span>这是底部</span>
+  <span class="fill-remaining-space"></span>
+</md-toolbar>
