--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,3 +1,6 @@
-<p>
-  header works!
-</p>
+<md-toolbar color="primary">
+  <button md-icon-button (click)="openSidebar()">
+    <md-icon>menu</md-icon>
+  </button>
+  <span>企业协作平台</span>
+</md-toolbar>
