设置路由并且生成简易登录页

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     <app-header (toggle)="sidenav.toggle()"></app-header>
   </header>
   <main>
-    <button (click)="sidenav.toggle()">打开侧边栏</button>
+    <router-outlet></router-outlet>
   </main>
   <footer>
     <app-footer></app-footer>
