--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -1,3 +1,23 @@
-<p>
-  sidebar works!
-</p>
+<md-nav-list>
+  <h3 md-subheader>项目</h3>
+  <md-list-item>
+      <span md-line>项目首页</span>
+      <span md-line md-subheader>查看您的所有项目</span>
+  </md-list-item>
+  <h3 md-subheader>日历</h3>
+  <md-list-item>
+      <span>日历首页</span>
+  </md-list-item>
+    <md-list-item>
+      <span md-line>月视图</span>
+       <span md-line md-subheader>按月查看您的任务</span>
+  </md-list-item>
+    <md-list-item>
+      <span md-line>周视图</span>
+       <span md-line md-subheader>按周查看您的任务</span>
+  </md-list-item>
+    <md-list-item>
+      <span md-line>日视图</span>
+       <span md-line md-subheader>按天查看您的任务</span>
+  </md-list-item>
+</md-nav-list>
