--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,14 +1,20 @@
-<md-card>
-  <md-card-header>
-    <md-card-title> 登录：</md-card-title>
-  </md-card-header>
-  <md-card-content>
-    <md-input-container md-no-float>
-       <input mdInput placeholder="请输入用户名" type="text">
-    </md-input-container>
-  </md-card-content>
-  <md-card-actions>
-    <p>还没有账户？<a href="">注册</a></p>
-    <p>忘记密码?<a href="">找回</a></p>
-  </md-card-actions>
-</md-card>
+<form action="">
+  <md-card>
+    <md-card-header>
+      <md-card-title> 登录：</md-card-title>
+    </md-card-header>
+    <md-card-content>
+      <md-input-container md-no-float class="full-width">
+        <input mdInput placeholder="请输入用户名" type="text">
+      </md-input-container>
+      <md-input-container md-no-float class="full-width">
+        <input mdInput placeholder="请输入密码" type="password">
+      </md-input-container>
+        <button type="button" md-button>登录</button>
+    </md-card-content>
+    <md-card-actions class="text-right">
+      <p>还没有账户？<a href="">注册</a></p>
+      <p>忘记密码?<a href="">找回</a></p>
+    </md-card-actions>
+  </md-card>
+</form>
